--- a/src/common/style/index.css
+++ b/src/common/style/index.css
@@ -3,4 +3,12 @@ body,
 .wrapper {
     width: 100%;
     height: 100%;
+    background: rgba(228, 228, 228, 0.74);
+}
+.AppBodyBox{
+    width: 100%;
+    height: 100%;
+}
+.TextAlignCenter{
+    text-align: center;
 }
