--- a/src/common/style/index.css
+++ b/src/common/style/index.css
@@ -14,7 +14,7 @@ body,
   text-align: center;
 }
 .fontText {
-  padding: 4px 20px;
+  padding: 14px;
   font-size: 14px;
-  color: #494949;
+  color: #979797;
 }
