--- a/src/common/style/index.css
+++ b/src/common/style/index.css
@@ -3,7 +3,7 @@ body,
 .wrapper {
   width: 100%;
   height: 100%;
-  background: rgba(228, 228, 228, 0.74);
+  background: #ffffff;
 }
 .AppBodyBox {
   width: 100%;
@@ -17,7 +17,4 @@ body,
   padding: 14px;
   font-size: 14px;
   color: #979797;
-}
-.van-tabs__line {
-  background-color: #288b4a !important;
 }
